calico/network-policy-namespace-a.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-a
  namespace: namespace-a
spec:
  podSelector:
    matchLabels:
     name: nginx
  PolicyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      namespaceSelector:
        - matchLabels:
          - name: namespace-b
  egress:
    - to:
      namespaceSelector:
        - matchExpressions:
            key: namespace
            operator: In
            values: ["namespace-b","namespace-c"]
